@@ -1,10 +1,10 @@
 Package: raster
 Type: Package
 Title: Geographic analysis and modeling with raster data
-Version: 2.0-18
-Date: 1-October-2012
-Depends: methods, sp, R (>= 2.13.0)
-Suggests: rgdal (>= 0.6-28), rgeos (>= 0.2-3), ncdf, ncdf4, igraph, snow, bigmemory, tcltk, rasterVis
+Version: 2.0-19
+Date: 2-October-2012
+Depends: methods, sp, R (>= 2.14.0)
+Suggests: rgdal (>= 0.6-28), rgeos (>= 0.2-3), ncdf, ncdf4, igraph, parallel, bigmemory, tcltk, rasterVis
 Author: Robert J. Hijmans & Jacob van Etten
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com> 
 Description: Reading, writing, manipulating, analyzing and modeling of gridded spatial data. The package implements basic and high-level functions and processing of very large files is supported.
